--- a/src/todolist/values.yaml
+++ b/src/todolist/values.yaml
@@ -1,10 +1,8 @@
-serviceMonitor:
-  enabled: true
-  labels: {}
-  interval: 10s
-  path: /metrics
-  port: http
-  image:
+# values.yaml
+
+image:
   repository: yevgene/todoapp
   tag: "1.0.0"
+  pullPolicy: IfNotPresent
 
+# інші налаштування...
